Various explanatory additions

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -100,31 +100,23 @@
    "source": [
     "## Tasks with Networks\n",
     "\n",
-    "* A simple feature classifier\n",
-    "* An image classifier\n",
-    "* A regression prediction\n",
-    "* Clustering with PyTorch\n",
+    "&nbsp;• A simple feature classifier \n",
+    "<a href=\"NetworkExamples_0.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>\n",
+    "    \n",
+    "&nbsp;• An image classifier\n",
+    "<a href=\"NetworkExamples_1.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>\n",
+    "    \n",
+    "&nbsp;• A regression prediction\n",
+    "<a href=\"NetworkExamples_2.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>\n",
     "\n",
-    "<div><a href=\"NetworkExamples_0.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Intermediate Material"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Tasks with Networks (cont)\n",
+    "&nbsp;• Clustering with PyTorch\n",
+    "<a href=\"NetworkExamples_3.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>\n",
     "\n",
-    "* Generative Adversarial Networks (GAN)\n",
-    "* Part of Speech Tagger\n",
+    "&nbsp;•  Generative Adversarial Networks (GAN)\n",
+    "<a href=\"NetworkExamples_4.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>\n",
     "\n",
-    "<div><a href=\"NetworkExamples_4.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a></div>"
+    "&nbsp;•  Part of Speech Tagger\n",
+    "<a href=\"NetworkExamples_5.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>"
    ]
   },
   {
