Changes on remote host

--- a/NetworkExamples_5.ipynb
+++ b/NetworkExamples_5.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,9 +93,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'the': 0, 'dog': 1, 'ate': 2, 'apple': 3, 'we': 4, 'often': 5, 'pie': 6, 'everybody': 7, 'read': 8, 'that': 9, 'book': 10, 'do': 11, 'not': 12, 'me': 13}\n"
+     ]
+    }
+   ],
    "source": [
     "training_data = [\n",
     "    (\"the dog ate the apple\".split(), [\"DET\", \"NOUN\", \"VERB\", \"DET\", \"NOUN\"]),\n",
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,9 +212,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial\n",
+      "tensor([[-1.5592, -1.7667, -1.4604, -1.6743, -1.6133],\n",
+      "        [-1.6041, -1.7337, -1.4920, -1.6268, -1.6055],\n",
+      "        [-1.5127, -1.8201, -1.5068, -1.5673, -1.6742],\n",
+      "        [-1.5733, -1.7121, -1.4899, -1.6639, -1.6226],\n",
+      "        [-1.5781, -1.6812, -1.6020, -1.6052, -1.5840]])\n"
+     ]
+    }
+   ],
    "source": [
     "# These will usually on the order of 32 or 64 dimensional for a \n",
     "# real-world vocabulary and training set size\n",
@@ -253,14 +274,28 @@
    "source": [
     "### Making predictions\n",
     "\n",
-    "First let us tag some novel sentences.  These sentence, however, do not contain any novel words.  But of significance, the same word `dog` is used as both a noun and verb in the training set, and in both ways in the same sentence in the test set.  The tagger correctly identifies the role of each word."
+    "First let us tag some novel sentences.  These sentence, however, do not contain any novel words.  But of significance, the same word `dog` is used as both a noun and verb in the training set, and in both ways in the same sentence in the test set.  The tagger correctly identifies the role of each word. I.e.:\n",
+    "\n",
+    "* _dog_ (verb): follow someone closely and persistently.\n",
+    "* _dog_ (noun): a domesticated carnivorous mammal "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the[DET] dog[NOUN] read[VERB] the[DET] book[NOUN] \n",
+      "\n",
+      "we[PRON] dog[VERB] the[DET] dog[NOUN] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "test_data = [\n",
     "    \"the dog read the book\".split(),\n",
@@ -286,9 +321,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DET</th>\n",
+       "      <th>NOUN</th>\n",
+       "      <th>VERB</th>\n",
+       "      <th>PRON</th>\n",
+       "      <th>PART</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>the</td>\n",
+       "      <td>-0.013743</td>\n",
+       "      <td>-6.239648</td>\n",
+       "      <td>-5.008960</td>\n",
+       "      <td>-5.415964</td>\n",
+       "      <td>-7.459838</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>dog</td>\n",
+       "      <td>-6.495167</td>\n",
+       "      <td>-0.012434</td>\n",
+       "      <td>-6.665903</td>\n",
+       "      <td>-4.823316</td>\n",
+       "      <td>-6.480805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>read</td>\n",
+       "      <td>-5.277414</td>\n",
+       "      <td>-7.667194</td>\n",
+       "      <td>-0.010107</td>\n",
+       "      <td>-7.972817</td>\n",
+       "      <td>-5.487593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>the</td>\n",
+       "      <td>-0.009360</td>\n",
+       "      <td>-6.717165</td>\n",
+       "      <td>-5.100127</td>\n",
+       "      <td>-6.390607</td>\n",
+       "      <td>-8.007298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>book</td>\n",
+       "      <td>-4.429600</td>\n",
+       "      <td>-0.048896</td>\n",
+       "      <td>-5.763106</td>\n",
+       "      <td>-3.523305</td>\n",
+       "      <td>-5.757827</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           DET      NOUN      VERB      PRON      PART\n",
+       "the  -0.013743 -6.239648 -5.008960 -5.415964 -7.459838\n",
+       "dog  -6.495167 -0.012434 -6.665903 -4.823316 -6.480805\n",
+       "read -5.277414 -7.667194 -0.010107 -7.972817 -5.487593\n",
+       "the  -0.009360 -6.717165 -5.100127 -6.390607 -8.007298\n",
+       "book -4.429600 -0.048896 -5.763106 -3.523305 -5.757827"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
