Comment on GAN learning rate

--- a/NetworkExamples_4.ipynb
+++ b/NetworkExamples_4.ipynb
@@ -413,7 +413,7 @@
    "source": [
     "# Model parameters\n",
     "minibatch_size = 4\n",
-    "num_epochs = 5000\n",
+    "num_epochs = 5001\n",
     "print_interval = 500\n",
     "d_steps = 20\n",
     "g_steps = 20\n",
@@ -436,10 +436,21 @@
     "\n",
     "# Stochastic Gradient Descent optimizers\n",
     "d_learning_rate = 2e-4\n",
-    "g_learning_rate = 2e-4\n",
+    "g_learning_rate = 4e-4\n",
     "sgd_momentum = 0.9\n",
     "d_optimizer = optim.SGD(D.parameters(), lr=d_learning_rate, momentum=sgd_momentum)\n",
     "g_optimizer = optim.SGD(G.parameters(), lr=g_learning_rate, momentum=sgd_momentum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A note here is that I have played around with the learning rate for both the generator and the discriminator.  If a low learning rate is selected, we simply do not really reach joint optimization of the 4 moments of the curve that we are looking for.  But if a high learning rate is selected, we reach something roughly normal shaped quickly, but cannot improve since each epoch then simply bounces around too much to stabilize.\n",
+    "\n",
+    "Moreover, there is an interaction between the learning rate of the generator versus the discriminator. If the discriminator becomes too accurate, it will reject all generated samples and the generator will not have a useful gradient between good and bad weights.  Likewise, if the generator becomes too accurate, relative to the discriminator, the discriminator will accept all samples and likewise no gradient will be available between good and bad.\n",
+    "\n",
+    "I've found that using a fairly low learning rate for both seems to work out (`1e4 < lr < 1e3`), with the generator having a somewhat higher (2x) learning rate.  But these numbers are very sensitive to all the other elements of the model design (layers, optimizer, loss function, etc)."
    ]
   },
   {
