Tweaks to notebooks

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -46,6 +46,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8, 6)\n",
+      "GeForce RTX 3090\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch import device, cuda\n",
+    "if cuda.is_available():\n",
+    "    print(cuda.get_device_capability())\n",
+    "    print(cuda.get_device_name())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -147,13 +168,6 @@
     "\n",
     "<div><a href=\"AllenNLP_0.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a></div>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -172,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
